# introduction-to-zephyr

./: .gitignore  Dockerfile.espressif  Dockerfile.rp2  README.md
.devcontainer/: devcontainer.json
scripts/: entrypoint.sh  zephyr.code-workspace
scripts/rp2/: west.yml
workspace/: west.yml
workspace/apps/01_blink/: prj.conf
workspace/apps/02_cmake_demo/: CMakeLists.txt
workspace/apps/02_solution_hello_blink/: CMakeLists.txt
workspace/apps/02_solution_hello_blink/lib/say_hello/: CMakeLists.txt
workspace/apps/03_demo_kconfig/: CMakeLists.txt
workspace/apps/03_kconfig_demo/: CMakeLists.txt
workspace/apps/03_solution_kconfig_float/: CMakeLists.txt
workspace/apps/04_button_demo/: CMakeLists.txt
workspace/apps/04_demo_button/: CMakeLists.txt
workspace/apps/04_solution_button_led/: CMakeLists.txt
workspace/apps/05_adc_demo/: CMakeLists.txt
workspace/apps/05_solution_pwm_knob/: CMakeLists.txt  prj.conf
workspace/apps/06_demo_device_driver/: CMakeLists.txt  prj.conf
workspace/apps/06_device_driver/: CMakeLists.txt  prj.conf
workspace/apps/06_solution_i2c_driver/: CMakeLists.txt  prj.conf
workspace/apps/08_demo_multithreading/: CMakeLists.txt
workspace/apps/08_demo_mutex/: prj.conf
workspace/apps/08_solution_sensor_queue/: prj.conf
workspace/apps/08_solution_sensor_semaphore/: CMakeLists.txt
workspace/apps/09_demo_counter_interrupt/: CMakeLists.txt  prj.conf
workspace/apps/09_demo_gpio_interrupt/: CMakeLists.txt
workspace/apps/09_demo_timer/: CMakeLists.txt
workspace/apps/10_demo_display/: CMakeLists.txt  prj.conf
(+113 files in other folders)
